--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.insuranceagencyintelligence.com/ai2030-future-ready-manual" />
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; URL='https://www.insuranceagencyintelligence.com/ai2030-future-ready-manual'" />
   </head>
-  <body>
-    <p>If you are not redirected, <a href="https://www.insuranceagencyintelligence.com/ai2030-future-ready-manual">click here</a>.</p>
-  </body>
+  <body></body>
 </html>
